gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-02-28  Matt Ettus <matt@ettus.com>

	* Makefile.am:  Added x_multimulti.c

	* o_misc.c:  Added call to multi_multi_edit

	* x_multi_multi.c:  New File, contains beginnings of
	  multi component attrib editor dialog

2000-02-25  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Added gtk+extra widget set (libgtkextra.*)
	  to the link list of gschem (linked in only if it is installed)

2000-02-23  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gschem.c: Fixed a bug in the parsing/locating of the
	  first schematic filename commandline parameter

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

        * README/INSTALL: Updated files to reflect next release

	* src/*.c: Removed all // comments (changed to /* */)

	* src/i_callbacks.c: Got rid of setup_attr_selector, instead now 
	  calling attrib_edit_dialog directly
	
	* src/*.c: Fixed all warnings (using -Wall -Werror)

2000-02-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_text.c: Put the text origin markers in the backingstore so
	  they show up when you open up initally in the window.

	* src/o_text.c and friends: Added text-origin-marker keyword to
	  control if the markers are displayed or not

	* src/o_text.c: Added the ability to edit the text alignment using
	  Edit/Edit... (or Edit/Edit Text...)

	* examples/*.sch: Loaded and saved all example schematics so that they
	  use the new text format

2000-02-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_misc.c: Selecting Edit/Edit... on nets, buses, and pins now 
	  brings up the multi-attrib

	* src/*.c: Update a bunch of files to use call o_text_add with the
	  extra text alignment parameter
