@@ -10,6 +10,19 @@
 #ifdef HAS_LIBGTKEXTRA
 
 #include <gtkextra/gtksheet.h>
+
+void
+//multi_multi_edit_close(GtkWidget *w,TOPLEVEL *w_current)
+multi_multi_edit_close(GtkWidget *w,GtkWidget *window)
+{
+//	i_update_status(w_current, "Select Mode");
+//      w_current->event_state = SELECT;
+//      gtk_grab_remove(w_current->mawindow);
+        gtk_widget_destroy(window);
+//      w_current->mawindow = NULL;
+	
+}
+
 void
 multi_multi_edit(TOPLEVEL *w_current, OBJECT *list)
 {
@@ -25,8 +38,7 @@ multi_multi_edit(TOPLEVEL *w_current, OBJECT *list)
 	GtkWidget *okbutton;
 	GtkWidget *cancelbutton;
 
-	printf("Multi-Multi\n");
-
+	int rowcount = 1;
 	components = g_ptr_array_new();
 	type = list->type;
 	
@@ -36,34 +48,47 @@ multi_multi_edit(TOPLEVEL *w_current, OBJECT *list)
 	while(current)
 	{
 		if(current->type == type)
+		{
 			g_ptr_array_add(components,current);
+			rowcount++;
+		}
 		current=current->next;
 	}
 
+//	attriblist=o_attrib_return_attribs(w_current->page_current->object_head,
+//		w_current->page_current->selection_head->next);
+//	o_attrib_get_name_value(attriblist[i]->text_string,
+//		text[0],text[2]);
+                        
+	
 	window = gtk_window_new(GTK_WINDOW_TOPLEVEL);
 
 	vbox = gtk_vbox_new(FALSE,3);
 	gtk_container_add(GTK_CONTAINER(window),vbox);
 	gtk_widget_show(vbox);
-
 	scrolledwindow = gtk_scrolled_window_new(NULL,NULL);
-	gtk_box_pack_start(vbox,scrolledwindow,TRUE,FALSE,0);
+	gtk_box_pack_start(GTK_BOX(vbox),scrolledwindow,TRUE,TRUE,0);
 	gtk_widget_show(scrolledwindow);
 	
 	buttonbox = gtk_hbutton_box_new();
-	gtk_box_pack_end(vbox,buttonbox,TRUE,FALSE,0);
+	gtk_box_pack_end(GTK_BOX(vbox),buttonbox,FALSE,FALSE,3);
 	gtk_widget_show(buttonbox);
 
-	gtk_button_new_with_label("Ok");
-	gtk_box_pack_start(buttonbox,okbutton,TRUE,FALSE,0);
+	okbutton = gtk_button_new_with_label("Ok");
+	gtk_container_add(GTK_CONTAINER(buttonbox),okbutton);
 	gtk_widget_show(okbutton);
-	gtk_button_new_with_label("Cancel");
-	gtk_box_pack_end(buttonbox,cancelbutton,TRUE,FALSE,0);
+	cancelbutton = gtk_button_new_with_label("Cancel");
+	gtk_container_add(GTK_CONTAINER(buttonbox),cancelbutton);
 	gtk_widget_show(cancelbutton);
 
-	sheet=gtk_sheet_new(10,5,"Test Sheet");
-	gtk_container_add(GTK_CONTAINER(scrolledwindow),sheet);
-	gtk_widget_show(sheet);
+	sheet=GTK_SHEET(gtk_sheet_new(rowcount,5,"Test Sheet"));
+	gtk_container_add(GTK_CONTAINER(scrolledwindow),GTK_WIDGET(sheet));
+	gtk_widget_show(GTK_WIDGET(sheet));
+
+        gtk_window_set_title (GTK_WINDOW (window), "Edit Component");
+        gtk_widget_set_usize(window, 645, 400);
+
+        gtk_window_position(GTK_WINDOW (window), GTK_WIN_POS_MOUSE);
 
 	gtk_widget_show(window);
 
@@ -71,16 +96,50 @@ multi_multi_edit(TOPLEVEL *w_current, OBJECT *list)
                                 GTK_SIGNAL_FUNC(destroy_window),
                                 window);
 
+	gtk_signal_connect(GTK_OBJECT(okbutton), "clicked",
+				GTK_SIGNAL_FUNC(multi_multi_edit_close),
+				window);
+
+	gtk_signal_connect(GTK_OBJECT(cancelbutton), "clicked",
+				GTK_SIGNAL_FUNC(multi_multi_edit_close),
+				window);
+/*
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "key_press_event",
+                    (GtkSignalFunc) clipboard_handler,
+                    NULL);
+
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "resize_range",
+                    (GtkSignalFunc) resize_handler,
+                    NULL);
+
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "move_range",
+                    (GtkSignalFunc) move_handler,
+                    NULL);
+
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "changed",
+                    (GtkSignalFunc) alarm_change,
+                    NULL);
+
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "activate",
+                    (GtkSignalFunc) alarm_activate,
+                    NULL);
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "deactivate",
+                    (GtkSignalFunc) alarm_deactivate,
+                    NULL);
+
+ gtk_signal_connect(GTK_OBJECT(sheet),
+                    "traverse",
+                    (GtkSignalFunc) alarm_traverse,
+                    NULL);
+*/
+
+
 }
 
-void
-multi_multi_edit_close(GtkWidget *w,TOPLEVEL *w_current)
-{
-        i_update_status(w_current, "Select Mode");
-        w_current->event_state = SELECT;
-//        gtk_grab_remove(w_current->mawindow);
-        gtk_widget_destroy(w);
-//        w_current->mawindow = NULL;
-	
-}
 #endif
