@@ -9,6 +9,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-03-07  Matt Ettus <matt@ettus.com>
+
+	* x_multimulti.c:  Moving along on dialog box
+	  Shouldn't segault anymore, looks nicer.
+
 2000-02-28  Matt Ettus <matt@ettus.com>
 
 	* Makefile.am:  Added x_multimulti.c
